--- a/css/Box Model.html
+++ b/css/Box Model.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Box Model</title>
+    <!-- <link rel="stylesheet" href="./style.css"> -->
 
     <style>
       div {
@@ -20,9 +21,17 @@
         padding: 50px;
         margin: 20px;
         float: right;
-
-
       }
+
+      .text1{
+        background-color: rgb(63, 58, 58);
+        width: 300px;
+        border: 20px rgb(160, 241, 9);
+        padding: 50px;
+        margin: 50px;
+        border:30px dotted;
+      }
+
       </style>
 </head>
 <body>
@@ -40,7 +49,11 @@
          <div class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae laudantium culpa voluptatum facere cumque,
            repellat optio modi architecto maiores eum tempore necessitatibus minima deleniti ex,
             quisquam ducimus. Dolor, labore dicta.</div 1>
-
+         
+            <div class="text1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae laudantium culpa voluptatum facere cumque,
+              repellat optio modi architecto maiores eum tempore necessitatibus minima deleniti ex,
+               quisquam ducimus. Dolor, labore dicta.</div 1>
+   
  
 </body>
 </html>
