--- a/css/website.html
+++ b/css/website.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="./website.css">
 </head>
 
-<body>
-    <header>
+<body style="position: relative;">
+
+    <header style="position: sticky; top: 2px;">
         <nav class="navbar">
             <div class="navbar-container">
                 <!-- <input type="checkbox">
